<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_18"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_black_18"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_permission"
            android:icon="@drawable/baseline_outlined_flag_black_18"
            android:title="@string/menu_permission" />
        <item
            android:id="@+id/nav_contract"
            android:icon="@drawable/baseline_content_paste_black_18"
            android:title="@string/menu_contract" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/baseline_file_copy_black_18"
            android:title="@string/menu_data" />
    </group>
</menu>